整合pagehelper 实现条件分页

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,12 @@
                 <artifactId>mybatis-memcached</artifactId>
             <version>1.0.0</version>
         </dependency>
-
+		<!--pagehelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
+        </dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
