--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,13 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/jxz?createDatabaseIfNotExist=true&amp;useUnicode=true&amp;characterEncoding=utf-8  
 spring.datasource.username=root  
 spring.datasource.password=
+
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
+
+logging.level.com.jxz=debug
+logging.level.org.springframework.web=debug
+logging.level.org.springframework.transaction=debug
+logging.level.org.mybatis=debug
